# calc_PINHEIRO

./: .coverage  .cursorrules  DECISION_LOG_STORY_1_4.md  DECISION_LOG_STORY_1_5.md  pyproject.toml  requirements.txt
.aios-core/: core-config.yaml  install-manifest.yaml  version.json
.cursor/rules/: aios.mdc
.streamlit/: config.toml
docs/: ANALISE_ESTRATEGICA_2026_02_24.md  MVP_PLAN.md  SESSION_REPORT_2026_02_24.md  WORKFLOW_COMPLETO_HOLERITEPRO.md
docs/prd/: prd.md
docs/qa/: QA_GATE_SUMMARY_1.4_1.5.md  decision_log_qa_1.4_1.5.md  qa_gate_1.4.md  qa_gate_1.4_recheck.md  qa_gate_1.5.md  qa_gate_1.5_recheck.md
docs/referencias/: 02. PLANILHA DE CÁLCULO- ACUMULO IAMSPE.xlsx  PASSO A PASSO - DIFERENÇA DE CLASSE - POLICIAL CIVIL.docx  PASSO A PASSO - IAMSPE.docx  PASSO A PASSO - INICIAL ATS EDUCAÇÃO(1).docx  desktop.ini  (+2 more)
src/: __init__.py  __main__.py
src/core/: __init__.py  (+5 more)
tests/: __init__.py  test_base_parser.py  test_base_tese_utils.py  test_continuation_detection.py  test_coverage_gaps.py  test_data_model.py  test_ddpe_parser_cabecalho.py  test_ddpe_parser_e2e.py  test_ddpe_parser_totals.py  test_ddpe_parser_verbas.py  test_end_to_end.py  test_fuzzy_matching.py  test_normalizer.py  test_ocr_fallback.py  test_pdf_reader.py  test_spprev_aposentado_parser_cabecalho.py  test_spprev_aposentado_parser_e2e.py  test_spprev_aposentado_parser_proventos.py  test_spprev_aposentado_parser_totals.py  test_spprev_pensionista_parser_cabecalho.py  test_spprev_pensionista_parser_e2e.py  test_spprev_pensionista_parser_proventos.py  test_spprev_pensionista_parser_totals.py
(+27 files in other folders)
